--- a/index.html
+++ b/index.html
@@ -2,69 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pastel Dental Clinic</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+    <title>Dentaneer Dental Clinic</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Thai:wght@100..900&display=swap" rel="stylesheet">
-    <script>
-      tailwind.config = {
-        theme: {
-          extend: {
-            fontFamily: {
-              sans: ['"Noto Sans Thai"', 'sans-serif'],
-            },
-            colors: {
-              'pastel-green': {
-                50: '#F0FBF4',
-                100: '#E0F5E9',
-                200: '#C5EBD5',
-                300: '#9ADDC0',
-                400: '#6CC8A9',
-                500: '#47B290',
-                600: '#339A79',
-                700: '#277961',
-                800: '#216250',
-                900: '#1D5344',
-                950: '#0F2D25',
-              },
-            }
-          }
-        }
-      }
-    </script>
-    <style>
-      body {
-        font-family: 'Noto Sans Thai', sans-serif;
-      }
-    </style>
-
-    <!-- STEP 1: Load Core Libraries (These create global variables: React, ReactDOM, ReactRouterDOM) -->
-    <script src="https://unpkg.com/react@18/umd/react.development.js" crossorigin></script>
-    <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js" crossorigin></script>
-    <script src="https://unpkg.com/react-router-dom@6/umd/react-router-dom.development.js" crossorigin></script>
-    
-    <!-- STEP 2: Load Babel for JSX/TSX Transpilation -->
-    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-    
-<script type="importmap">
-{
-  "imports": {
-    "react": "https://aistudiocdn.com/react@^19.1.1",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.1.1/",
-    "react-router-dom": "https://aistudiocdn.com/react-router-dom@^7.9.3",
-    "react/": "https://aistudiocdn.com/react@^19.1.1/"
-  }
-}
-</script>
-<link rel="stylesheet" href="/index.css">
+  <link rel="stylesheet" href="/index.css">
 </head>
   <body>
     <div id="root"></div>
-    <!-- STEP 3: Load and transpile our application code -->
-    <script type="text/babel" src="/index.tsx"></script>
+    <script type="module" src="/src/index.tsx"></script>
   <script type="module" src="/index.tsx"></script>
 </body>
 </html>
